# mcp-web-integration

./: README.md  hello.py  pyproject.toml
src/web_integration/: __main__.py  server.py
src/web_integration/crawl4ai/: __init__.py  config.py  crawler.py  schemas.py  tool.py
src/web_integration/searxng/: __init__.py  config.py  schemas.py  searcher.py  tool.py
src/web_integration/youtube/: __init__.py  config.py  extractor.py  schemas.py  tool.py
