[project]
name = "mcp-web-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "youtube-transcript-api>=0.6.2",
]

[project.scripts]
mcp-web-integration = "web_integration.server:main"
